--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
-
+<body class="work-sans">
+    <!-- header section -->
+    <header class="bg-primary">
+        <div class="nav-container d-flex container">
+            <h1 class="architect-logo color-primary">G3 Architects</h1>
+            <ul class="nav-links d-flex">
+                <li class="nav-item"><a href="" class="nav-link secondary-color">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link secondary-color">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link secondary-color">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link secondary-color">Login</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 
 </html>
