--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body class="work-sans">
     <!-- header section -->
     <header class="bg-primary">
-        <div class="nav-container d-flex container">
+        <!-- nav section -->
+        <section class="nav-container d-flex container">
             <h1 class="architect-logo color-primary">G3 Architects</h1>
             <ul class="nav-links d-flex">
                 <li class="nav-item"><a href="" class="nav-link secondary-color">Home</a></li>
@@ -20,7 +21,22 @@
                 <li class="nav-item"><a href="" class="nav-link secondary-color">Contact Us</a></li>
                 <li class="nav-item"><a href="" class="nav-link secondary-color">Login</a></li>
             </ul>
-        </div>
+        </section>
+        <!-- banner section -->
+        <section class="banner-container container">
+            <!-- banner content here -->
+            <div class="banner-content text-center">
+                <h2 class="banner-title color-primary">Brand New
+                    Group of Architects
+                </h2>
+                <p class="banner-description secondary-color">There are many variations of passages of Lorem Ipsum
+                    available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="section-btn">Explore More</button>
+            </div>
+            <img src="./images/banner.png" alt="" class="banner-img section-img">
+        </section>
     </header>
 </body>
 
