--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </section>
         <!-- banner section -->
-        <section class="banner-container container">
+        <section class="banner-container container section-space-bottom">
             <!-- banner content here -->
             <div class="banner-content text-center">
                 <h2 class="banner-title color-primary">Brand New
@@ -38,6 +38,26 @@
             <img src="./images/banner.png" alt="" class="banner-img section-img">
         </section>
     </header>
+    <!-- main section -->
+    <main>
+        <!-- team section -->
+        <section class="team-container container d-flex section-space-bottom">
+            <div class="team-img">
+                <img src="./images/team1.png" alt="" class="section-img">
+                <img src="./images/team2.png" alt="" class="section-img">
+                <img src="./images/team3.png" alt="" class="section-img">
+                <img src="./images/team4.png" alt="" class="section-img">
+            </div>
+            <div class="team-content">
+                <h2 class="team-title"><span class="team-title-one">Quick list</span> of Our <br> <span
+                        class="team-title-two">Features</span></h2>
+                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="section-btn">Explore More</button>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
