--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </section>
     </header>
     <!-- main section -->
-    <main>
+    <main class="container">
         <!-- team section -->
-        <section class="team-container container d-flex section-space-bottom">
+        <section class="team-container d-flex section-space-bottom">
             <div class="team-img">
                 <img src="./images/team1.png" alt="" class="section-img">
                 <img src="./images/team2.png" alt="" class="section-img">
@@ -55,6 +55,48 @@
                     majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="section-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- feater-secition -->
+        <section class="feature-container d-flex">
+            <div class="feature-content">
+                <h3 class="feature-title color-primary">
+                    Features you will <br>love & enjoy
+                </h3>
+                <p class="feature-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="feature-items">
+                    <div class="feature-item">
+                        <h4 class="feature-item-title color-primary">Dexktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-item">
+                        <h4 class="feature-item-title color-primary">Drag & Drop Builder</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-item">
+                        <h4 class="feature-item-title color-primary">Awesome Modern Design</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-item">
+                        <h4 class="feature-item-title color-primary">Super Easy to Edit</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-img">
+                <img src="./images/architect.png" alt="" class="section-img">
+                <div class="feature-badge text-center">
+                    <span class="badge10">10+Year</span>
+                    <br>
+                    <span class="badge-exp">Experience</span>
+                </div>
             </div>
         </section>
     </main>
